--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Rememberitwholesale</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+    <head>
+        <meta charset="utf-8" />
+        <title>Remember It Wholesale</title>
+        <base href="/" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="icon" href="./assets/favicon/favicon-32.png" sizes="32x32">
+        <link rel="apple-touch-icon" href="./assets/favicon/favicon-180.png">
+        <link rel="manifest" href="./assets/favicon/manifest.webmanifest">
+    </head>
+
+    <body>
+        <app-root></app-root>
+    </body>
 </html>
