Added sorting. Added better height. Removed Apple icon to save the load. Put a bunch of neat options on the data table, like resizable columns

--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,8 @@
         <title>Remember It Wholesale</title>
         <base href="/" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="icon" href="./assets/favicon/favicon-32.png" sizes="32x32">
-        <link rel="apple-touch-icon" href="./assets/favicon/favicon-180.png">
-        <link rel="manifest" href="./assets/favicon/manifest.webmanifest">
+        <link rel="icon" href="./assets/favicon/favicon-32.png" sizes="32x32" />
+        <link rel="manifest" href="./assets/favicon/manifest.webmanifest" />
     </head>
 
     <body>
