Styling, removed Toolbar component (didn't add much value), a lot of mobile focus, some table polish, pagination

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <title>Remember It Wholesale</title>
         <base href="/" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1" />
         <link rel="icon" href="./assets/favicon/favicon-32.png" sizes="32x32" />
         <link rel="manifest" href="./assets/favicon/manifest.webmanifest" />
     </head>
