Key 12:45am changes

--- a/src/public.html
+++ b/src/public.html
@@ -744,7 +744,7 @@
         
         // If we're at "seconds", just return simple text instead
         if (toReturn.indexOf('second') !== -1) {
-          return 'New';
+          return 'Now';
         }
         
         if (!longForm) {
