Added simple in-memory cache for resized images. Also try to maintain orientation

--- a/src/public.html
+++ b/src/public.html
@@ -661,7 +661,7 @@
                   if (upload.type === 'title') {
                     state.hasUploadedTitles = true;
                   }
-                  else if (upload.type === 'file') {
+                  else if (upload.type === 'image') {
                     // Also by default auto-scale our images so they load faster and don't waste bandwidth
                     // TODO Customize the scaling, perhaps have a capSize=1200 (px) or similar param the user can customize
                     upload.url += '?scale=auto';
